ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inference-cluster-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
    # EKS's public subnets
    alb.ingress.kubernetes.io/subnets: subnet-0f5dcf3664bb0277d, subnet-0ac2028dcb392abca
    alb.ingress.kubernetes.io/target-type: ip
    # ALB to route traffic to the healthy pod.
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /-/routes
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /llama
            pathType: Prefix
            backend:
              service:
                name: llama-service-serve-svc # Serve service
                port:
                  number: 8000 # default HTTP port number for serving requests
          - path: /
            pathType: Prefix
            backend:
              service:
                name: llama-service-head-svc # Head service
                port:
                  number: 8265 # default dashboard port
